# python-mongodb-charts

./: .gitignore  .gitpod.yml  README.md  example.env  main.py  pyproject.toml
metrics/: config.py  transform.py
metrics/commands/: report.py
tests/: example.report.json  test_report_json.py  test_setup.py  test_transform.py
tests/ui/: test_login.py
