[tool.poetry]
name = "python-mongodb-charts"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <carlos@qap.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
pyleniumio = "^1.17.2"
pymongo = "^4.3.3"
typer = { version = "^0.7.0", extras = ["all"] }
pytest-json-report = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
poethepoet = "^0.15.0"
pytest-cov = "^3.0.0"
ipykernel = "^6.15.1"

[tool.black]
line-length = 120

[tool.poe.tasks]
run = { "cmd" = "python main.py", "help" = "Execute the main.py CLI application." }
test = { "cmd" = "pytest tests --json-report --cov=tests --cov=metrics", "help" = "Run all tests." }
lint = [{ "ref" = "_lint-syntax" }, { "ref" = "_lint-full" }]

# private tasks
_lint-syntax = { "cmd" = "flake8 ./metrics ./tests --select=E9,F63,F7,F82 --show-source", "help" = "Lint for syntax error and undefined names." }
_lint-full = { "cmd" = "flake8 ./metrics ./tests --exit-zero --max-complexity=10", "help" = "Lint for style, complexity, and everything else." }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
